--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,8 @@ h1 {
     width: fit-content;
     padding: 0px 10px;
     text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 hr {
@@ -50,7 +52,14 @@ h2, h3 {
 }
 
 #gif-div {
-    display: none;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+
+    
+}
+.picture {
+    
 }
 footer {
     padding: 0px;
